modified homepage and set up skeleton of site (all html and css files created but not modified

--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Johnny's Zoo</title>
+    <title>Nick's Zoo</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
   </head>
   <body>
-    <h1>Welcome to Johnny's Zoo</h1>
-    <h3>See the animals at the zoo:</h3>
+    <h1>Welcome to Nick's Zoo</h1>
+    <h3>Check out our fun animals:</h3>
     <div class="link">
-      <a href="polar-bear.html">Polar Bear</a>
+        <a href="pig.html">Pig</a>
+        <br>
+        <a href="sheep.html">Sheep</a>
+        <br>
+        <a href="alligator.html">Alligator</a>
+        <br>
+        <a href="capybara.html">Capybara</a>
+        <br>
     </div>
   </body>
 </html>
