add pig page and img

--- a/pig.html
+++ b/pig.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Johnny's Zoo - Polar Bear</title>
-    <link rel="stylesheet" type="text/css" href="css/polar-bear.css">
+    <title>Nick's Zoo - Pig</title>
+    <link rel="stylesheet" type="text/css" href="css/pig.css">
   </head>
   <body>
-    <h1>Polar Bear</h1>
-    <img src="img/polar-bear.gif" alt="polar bear">
+    <h1>Pig</h1>
+    <img src="img/pig.jpg" alt="polar bear">
     <p>
-      The polar bear is a hypercarnivorous bear whose native range lies largely within the Arctic Circle, 
-      encompassing the Arctic Ocean, its surrounding seas and surrounding land masses. 
-      It is the largest extant bear species, as well as the largest extant land carnivore.
+      The pig, known as "sus domesticus" is a common animal on farms.
+      <br>
+      They are primarily farmed for pork, although some are kept as pets.
+      <br>
+      Pigs are known for their snouts, which can be used to find food and dig soil.
     </p>
   </body>
 </html>
