add Go back? link

--- a/pig.html
+++ b/pig.html
@@ -14,5 +14,6 @@
       <br>
       Pigs are known for their snouts, which can be used to find food and dig soil.
     </p>
+    <h3> <a href="index.html"> Go back to the rest of the zoo? </a> </h3>
   </body>
 </html>
