--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Welcome to Nick's Zoo</h1>
     <h3>Check out our fun animals:</h3>
-    <div class="link">
+    <div class="links">
         <a href="pig.html">Pig</a>
         <br>
         <a href="sheep.html">Sheep</a>
@@ -15,7 +15,6 @@
         <a href="alligator.html">Alligator</a>
         <br>
         <a href="capybara.html">Capybara</a>
-        <br>
     </div>
   </body>
 </html>
