add sheep page and image

--- a/sheep.html
+++ b/sheep.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Johnny's Zoo - Polar Bear</title>
-    <link rel="stylesheet" type="text/css" href="css/polar-bear.css">
+    <title>Nick's Zoo - Sheep</title>
+    <link rel="stylesheet" type="text/css" href="css/sheep.css">
   </head>
   <body>
-    <h1>Polar Bear</h1>
-    <img src="img/polar-bear.gif" alt="polar bear">
+    <h1>Sheep</h1>
+    <img src="img/sheep.jpg" alt="sheep">
     <p>
-      The polar bear is a hypercarnivorous bear whose native range lies largely within the Arctic Circle, 
-      encompassing the Arctic Ocean, its surrounding seas and surrounding land masses. 
-      It is the largest extant bear species, as well as the largest extant land carnivore.
+      The sheep, also called "ovis aries" are a typical farm animal.
+      <br>
+      They are used for their fleeces, milk, and meat.
+      <br>
+      Sheep need to have their wool cut by farmers, or else they overheat.
     </p>
+    <h3> <a href="index.html"> Go back to the rest of the zoo? </a> </h3>
   </body>
 </html>
