fix pig img alttext

--- a/pig.html
+++ b/pig.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Pig</h1>
-    <img src="img/pig.jpg" alt="polar bear">
+    <img src="img/pig.jpg" alt="pig">
     <p>
       The pig, known as "sus domesticus" is a common animal on farms.
       <br>
