--- a/alligator.html
+++ b/alligator.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Johnny's Zoo - Polar Bear</title>
-    <link rel="stylesheet" type="text/css" href="css/polar-bear.css">
+    <title>Nick's Zoo - Alligator</title>
+    <link rel="stylesheet" type="text/css" href="css/alligator.css">
   </head>
   <body>
-    <h1>Polar Bear</h1>
-    <img src="img/polar-bear.gif" alt="polar bear">
+    <h1>Alligator</h1>
+    <img src="img/alligator.png" alt="alligator">
     <p>
-      The polar bear is a hypercarnivorous bear whose native range lies largely within the Arctic Circle, 
-      encompassing the Arctic Ocean, its surrounding seas and surrounding land masses. 
-      It is the largest extant bear species, as well as the largest extant land carnivore.
+      The alligator, likely coming from the Spanish "el lagarto", is a large reptile.
+      <br>
+      It lives exclusively in the United States, Mexico, and China.
+      <br>
+      They are best known for living in swamps and suddenly leaping out to bite their prey.
     </p>
+    <h3> <a href="index.html"> Go back to the rest of the zoo? </a> </h3>
   </body>
 </html>
