add extra comma to pig description

--- a/pig.html
+++ b/pig.html
@@ -8,7 +8,7 @@
     <h1>Pig</h1>
     <img src="img/pig.jpg" alt="pig">
     <p>
-      The pig, known as "sus domesticus" is a common animal on farms.
+      The pig, known as "sus domesticus", is a common animal on farms.
       <br>
       They are primarily farmed for pork, although some are kept as pets.
       <br>
