--- a/capybara.html
+++ b/capybara.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Johnny's Zoo - Polar Bear</title>
-    <link rel="stylesheet" type="text/css" href="css/polar-bear.css">
+    <title>Nick's Zoo - Capybara</title>
+    <link rel="stylesheet" type="text/css" href="css/capybara.css">
   </head>
   <body>
-    <h1>Polar Bear</h1>
-    <img src="img/polar-bear.gif" alt="polar bear">
+    <h1>Capybara</h1>
+    <img src="img/capybara.jpg" alt="capybara">
     <p>
-      The polar bear is a hypercarnivorous bear whose native range lies largely within the Arctic Circle, 
-      encompassing the Arctic Ocean, its surrounding seas and surrounding land masses. 
-      It is the largest extant bear species, as well as the largest extant land carnivore.
+      The capybara -- called "hydrochoerus hydrochaeris" -- is the largest rodent alive.
+      <br>
+      They live in groups of between ten and twenty, and enjoy eating leaves.
+      <br>
+      Capybara are kept at certain zoos, including one which has them in hot baths during the Winter.
     </p>
+    <h3> <a href="index.html"> Go back to the rest of the zoo? </a> </h3>
   </body>
 </html>
